# kiibohd-firmware

./: Pipfile
hexgears/gemini/: Cargo.toml  build.rs
hexgears/gemini/.cargo/: config
hexgears/gemini/src/: bin.rs  lib.rs
